--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "@hotwired/stimulus": "^3.2.2",
+    "@hotwired/turbo-rails": "^8.0.13",
     "esbuild-plugin-postcss": "^0.3.0",
-    "postcss-loader": "^8.1.1"
+    "postcss-loader": "^8.1.1",
+    "stimulus": "^3.2.2"
   },
   "devDependencies": {
     "esbuild": "^0.25.3"
