--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.13",
+    "@rails/ujs": "^7.1.3-4",
     "esbuild-plugin-postcss": "^0.3.0",
     "postcss-loader": "^8.1.1",
     "stimulus": "^3.2.2"
